react (app): fix overflow text and completed items
- Formatted code
- Re-added completed items
- Fixed text being displayed under buttons
- Removed unused variable

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ h1 {
   gap: 0.85rem;
   min-width: 26.5rem;
   max-width: 26.5rem;
+  overflow-wrap: break-word;
   background-color: #fff;
 }
 
